Refactor : Remove unused imports, Remove ScoreManager